--- a/drivers/staging/qcacld-3.0/configs/default_defconfig
+++ b/drivers/staging/qcacld-3.0/configs/default_defconfig
@@ -655,9 +655,9 @@ CONFIG_WLAN_FEATURE_PKT_CAPTURE := y
 endif
 
 #Enable RX RING buffers debug
-CONFIG_DEBUG_RX_RING_BUFFER := y
+CONFIG_DEBUG_RX_RING_BUFFER := n
 
 #Enable Hash debug
-CONFIG_RX_HASH_DEBUG := y
+CONFIG_RX_HASH_DEBUG := n
 
-CONFIG_WLAN_HANG_EVENT := y
+CONFIG_WLAN_HANG_EVENT := n
