--- a/arch/arm64/configs/cust_defconfig
+++ b/arch/arm64/configs/cust_defconfig
@@ -1,5 +1,5 @@
 CONFIG_HOTPLUG_SIZE_BITS=29
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="Lawrun-v1"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -48,7 +48,7 @@ CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
-CONFIG_MODVERSIONS=y
+CONFIG_MODVERSIONS=n
 CONFIG_MODULE_SIG=y
 CONFIG_MODULE_SIG_FORCE=y
 CONFIG_MODULE_SIG_SHA512=y
@@ -93,7 +93,7 @@ CONFIG_KRYO_PMU_WORKAROUND=y
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
-CONFIG_COMPAT_VDSO=y
+CONFIG_COMPAT_VDSO=n
 CONFIG_SUSPEND_SKIP_SYNC=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
